// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createCheckboxField A with a link 1`] = `
{
  "columns": 1,
  "isRequired": false,
  "isValid": false,
  "isVisible": true,
  "label": "label",
  "link": "https://example.com",
  "regex": /\\^\\[,\\\\d\\\\p\\{L\\}\\\\s/&\\]\\{3,100\\}\\$/u,
  "type": "checkbox",
  "unit": "",
  "value": false,
}
`;

exports[`createSelectField A with a link 1`] = `
{
  "columns": 1,
  "isRequired": false,
  "isValid": false,
  "isVisible": true,
  "label": "label",
  "link": "https://example.com",
  "options": [],
  "regex": /\\^\\[,\\\\d\\\\p\\{L\\}\\\\s/&\\]\\{3,100\\}\\$/u,
  "type": "select",
  "unit": "",
  "value": "",
}
`;

exports[`validateForm A invalid field value 1`] = `
{
  "errorMessage": "Airtable view is required",
  "fields": {
    "base": {
      "columns": 1,
      "isRequired": true,
      "isValid": false,
      "isVisible": true,
      "label": "Airtable base",
      "link": "https://airtable.com/api",
      "regex": /\\^app\\\\w\\{14\\}\\$/u,
      "type": "text",
      "unit": "",
      "value": "azerty",
    },
    "table": {
      "columns": 1,
      "isRequired": true,
      "isValid": false,
      "isVisible": true,
      "label": "Airtable table",
      "link": "",
      "regex": /\\^\\[\\\\w-\\]\\{3,100\\}\\$/u,
      "type": "text",
      "unit": "",
      "value": "",
    },
    "token": {
      "columns": 1,
      "isRequired": true,
      "isValid": false,
      "isVisible": true,
      "label": "Airtable personal access token",
      "link": "https://airtable.com/create/tokens",
      "regex": /\\^pat\\[\\\\w\\.\\]\\{50,100\\}\\$/u,
      "type": "text",
      "unit": "",
      "value": "",
    },
    "view": {
      "columns": 1,
      "isRequired": true,
      "isValid": false,
      "isVisible": true,
      "label": "Airtable view",
      "link": "",
      "regex": /\\^\\[\\\\w-\\]\\{3,100\\}\\$/u,
      "type": "text",
      "unit": "",
      "value": "",
    },
    "wrap": {
      "columns": 1,
      "isRequired": false,
      "isValid": true,
      "isVisible": true,
      "label": "Wrap api key",
      "link": "https://wrapapi.com/user/api",
      "regex": /\\^\\\\w\\{32\\}\\$/u,
      "type": "text",
      "unit": "",
      "value": "",
    },
  },
  "isTouched": false,
  "isValid": false,
}
`;

exports[`validateForm B valid form 1`] = `
{
  "errorMessage": "",
  "fields": {
    "base": {
      "columns": 1,
      "isRequired": true,
      "isValid": true,
      "isVisible": true,
      "label": "Airtable base",
      "link": "https://airtable.com/api",
      "regex": /\\^app\\\\w\\{14\\}\\$/u,
      "type": "text",
      "unit": "",
      "value": "app1238479649646a",
    },
    "table": {
      "columns": 1,
      "isRequired": true,
      "isValid": true,
      "isVisible": true,
      "label": "Airtable table",
      "link": "",
      "regex": /\\^\\[\\\\w-\\]\\{3,100\\}\\$/u,
      "type": "text",
      "unit": "",
      "value": "my-table",
    },
    "token": {
      "columns": 1,
      "isRequired": true,
      "isValid": true,
      "isVisible": true,
      "label": "Airtable personal access token",
      "link": "https://airtable.com/create/tokens",
      "regex": /\\^pat\\[\\\\w\\.\\]\\{50,100\\}\\$/u,
      "type": "text",
      "unit": "",
      "value": "pat12345654987123azdazdzadazdzadaz465465468479649646azd46az465azdazd",
    },
    "view": {
      "columns": 1,
      "isRequired": true,
      "isValid": true,
      "isVisible": true,
      "label": "Airtable view",
      "link": "",
      "regex": /\\^\\[\\\\w-\\]\\{3,100\\}\\$/u,
      "type": "text",
      "unit": "",
      "value": "my-view",
    },
    "wrap": {
      "columns": 1,
      "isRequired": false,
      "isValid": true,
      "isVisible": true,
      "label": "Wrap api key",
      "link": "https://wrapapi.com/user/api",
      "regex": /\\^\\\\w\\{32\\}\\$/u,
      "type": "text",
      "unit": "",
      "value": "13246874azerty4987_pools13546354",
    },
  },
  "isTouched": false,
  "isValid": true,
}
`;
